# Rust-Awgen

./: .gitignore  Cargo.toml  Makefile  README.md
.github/workflows/: ci.yml
crates/awgen_client/: Cargo.toml
crates/awgen_client/src/: controller.rs  lib.rs
crates/awgen_math/: Cargo.toml
crates/awgen_math/src/: iterators.rs  lib.rs  region.rs
crates/awgen_network/: Cargo.toml
crates/awgen_network/src/: lib.rs  server_events.rs
crates/awgen_physics/: Cargo.toml
crates/awgen_physics/src/: lib.rs  position.rs  time.rs  velocity.rs
crates/awgen_server/: Cargo.toml
crates/awgen_server/src/: lib.rs
crates/awgen_world/: Cargo.toml
crates/awgen_world/src/: iterators.rs  lib.rs  populator.rs  world.rs
crates/awgen_world_mesh/: Cargo.toml
crates/awgen_world_mesh/src/: block_data.rs  lib.rs  mesher.rs
src/: camera.rs  main.rs  movement.rs
src/components/: mod.rs  movement.rs  player_input.rs
src/plugins/: mod.rs  physics.rs  player.rs  window.rs
src/prefabs/: basic_scene.rs  mod.rs  player.rs
src/resources/: mod.rs
src/systems/: mod.rs  physics.rs  player_input.rs
