[package]
name = "awgen"
version = "0.1.0"
authors = ["TheDudeFromCI <thedudefromci@gmail.com>"]
edition = "2021"
description = "The Awgen game engine."
readme = "README.md"
homepage = "https://github.com/TheDudeFromCI/Awgen"
repository = "https://github.com/TheDudeFromCI/Awgen"
license = "Apache-2.0"
keywords = ["game", "game engine", "sandbox", "graphics"]
categories = ["games", "game-engines"]

[dependencies]
bevy = "0.8.1"
awgen_client = { path = "crates/awgen_client", version = "0.1.0" }
awgen_network = { path = "crates/awgen_network", version = "0.1.0" }
awgen_physics = { path = "crates/awgen_physics", version = "0.1.0" }
awgen_server = { path = "crates/awgen_server", version = "0.1.0" }
clap = { version = "4.0.22", features = ["derive"] }

[profile.dev]
opt-level = 1

[profile.dev.package."*"]
opt-level = 3

[workspace]
members = [
  "crates/*"
]
