[package]
name = "awgen_client"
version = "0.1.0"
authors = ["TheDudeFromCI <thedudefromci@gmail.com>"]
edition = "2021"
description = "The client implementation for Awgen. Handles windows, graphics, and user input."
readme = "README.md"
homepage = "https://github.com/TheDudeFromCI/Awgen"
repository = "https://github.com/TheDudeFromCI/Awgen"
license = "Apache-2.0"
keywords = ["game", "game engine", "sandbox", "graphics"]
categories = ["games", "game-engines"]

[dependencies]
bevy = "0.9.0"
bevy-inspector-egui = "0.14.0"
awgen_physics = { path = "../awgen_physics", version = "0.1.0" }
num = "0.4.0"
