[package]
name = "awgen_math"
version = "0.1.0"
authors = ["TheDudeFromCI <thedudefromci@gmail.com>"]
edition = "2021"
description = "A collection of simple math utilities used by Awgen."
readme = "README.md"
homepage = "https://github.com/TheDudeFromCI/Awgen"
repository = "https://github.com/TheDudeFromCI/Awgen"
license = "Apache-2.0"
keywords = ["game", "game engine", "sandbox", "graphics"]
categories = ["games", "game-engines"]

[dependencies]
anyhow = "1.0.66"
bevy = "0.9.0"

[dev-dependencies]
pretty_assertions = "1.3.0"
