[package]
name = "awgen_physics"
version = "0.1.0"
authors = ["TheDudeFromCI <thedudefromci@gmail.com>"]
edition = "2021"
description = "The core physics implementation for Awgen."
readme = "README.md"
homepage = "https://github.com/TheDudeFromCI/Awgen"
repository = "https://github.com/TheDudeFromCI/Awgen"
license = "Apache-2.0"
keywords = ["game", "game engine", "sandbox", "graphics"]
categories = ["games", "game-engines"]

[dependencies]
bevy = "0.8.1"
iyes_loopless = "0.8.0"
num = "0.4.0"
